test/libsolidity/syntaxTests/license/license_double5.sol
/* SPDX-License-Identifier: GPL-3.0 OR GPL-2.0 */ /* SPDX-License-Identifier: GPL-3.0 OR GPL-2.0 */
contract C {}
// ----
// ParserError 1114: Invalid SPDX license identifier.
